Somewhat fixed centre aligned forms

--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,5 +1,6 @@
-.fields {
-  justify-content: center;
+.form-group {
+  margin-left: 25%;
+  margin-right: 25%;
 }
 
 .form-control {
